# Wowie-Jam-4.0

./: Burst Engine.h  Burst Engine.hpp  CMakeLists.txt  Readme.md  ai.hpp  level.hpp  main.cpp
Engine/App/: App.hpp  Window.h  Window.hpp
Engine/Audio/: AudioManager.hpp
Engine/ECS/: Camera.hpp  ECS.hpp  Light.hpp  MeshRenderer.h
Engine/Engine/: Engine.h  Engine.hpp
Engine/Input/: Input.hpp
Engine/Physics/: Physics.hpp
Engine/Rendering/: AttribObject.hpp  Color.h  Color.hpp  Enviornment.h  Enviornment.hpp  IndexObject.hpp  Material.hpp  Mesh.hpp  RenderObject.hpp  Renderer.h  Shader.h  Texture.h  Texture.hpp  VertexObject.h  VertexObject.hpp
Engine/Time/: Time.hpp
Engine/UI/: AnchorPoint.hpp  Button.hpp  Font.h  PanelRenderer.hpp  RectTransform.hpp  TextRenderer.hpp  UIManager.hpp
Engine/World/: Transform.hpp  Vector2.hpp  Vector3.h  Vector3.hpp
engine_res/Shaders/: skybox_fragment.shader  skybox_vertex.shader  ui_fragment.shader  ui_vertex.shader
libs/: Readme.md
res/: Credits.md
res/Shaders/: basic_fragment.shader  basic_vertex.shader  platform_fragment.shader  platform_vertex.shader  unlit_fragment.shader  unlit_vertex.shader
